--- a/com.jaspersoft.studio.rcp/plugin_it.properties
+++ b/com.jaspersoft.studio.rcp/plugin_it.properties
@@ -12,6 +12,7 @@ command.wizard.newstyletemplate.label=New Style Template
 command.wizard.newreport.label=New JasperReport
 activity.javadevel.name=Java Development
 command.switchlanguage.english.label=English
+command.switchlanguage.chinese.label=Chinese
 Bundle-Name=Jaspersoft Studio
 category.languages.name=Languages
 activity.javadevel.description=Java programming language environement
