add chinese resources

--- a/com.jaspersoft.studio/plugin_zh.properties
+++ b/com.jaspersoft.studio/plugin_zh.properties
@@ -1,9 +1,9 @@
 ###############################################################################
-# Copyright © 2010-2023. Cloud Software Group, Inc. All rights reserved.
+# Copyright © 2010-2025. Cloud Software Group, Inc. All rights reserved.
 ###############################################################################
 plugin.name=Jaspersoft\u5F00\u653E\u5DE5\u4F5C\u5BA4
 com.jaspersoft.studio.editor.JrxmlEditor.title=Jaspersoft Studio\u53EF\u89C6\u5316\u8BBE\u8BA1\u5668
-pluginName = Jasperreports \u6A21\u578B
+pluginName = Jasperreports\u6A21\u578B
 providerName = www.jaspersoft.com
 InputControls=\u8F93\u5165\u63A7\u4EF6
 context.jss.name=JSS\u4E0A\u4E0B\u6587
@@ -163,3 +163,54 @@ bringBackwardName=\u540E\u79FB\u9009\u62E9
 bringBackwardDescription=\u5728\u5927\u7EB2\u89C6\u56FE\u4E2D\u540E\u79FB\u5F53\u524D\u9009\u62E9\uFF0C\u5927\u7EB2\u5FC5\u987B\u83B7\u5F97\u7126\u70B9
 forceParentKeepName=\u6C38\u4E0D\u66F4\u6539\u7236\u7EA7
 forceParentKeepDescription=\u62D6\u52A8\u5143\u7D20\u65F6\uFF0C\u65E0\u8BBA\u653E\u7F6E\u5728\u4F55\u5904\uFF0C\u539F\u59CB\u7236\u7EA7\u6C38\u4E0D\u6539\u53D8
+
+JasperReportsJRXMLFile=JasperReports JRXML\u6587\u4EF6
+JasperReportsDesigner=JasperReports\u8BBE\u8BA1\u5668
+JasperPrintViewer=JasperPrint\u67E5\u770B\u5668
+JasperJRPxmlViewer=JasperJRPxml\u67E5\u770B\u5668
+JasperStyleTemplateEditor=Jasper\u6837\u5F0F\u6A21\u677F\u7F16\u8F91\u5668
+JasperReportsPreview=JasperReports\u9884\u89C8
+DataAdapterEditor=\u6570\u636E\u9002\u914D\u5668\u7F16\u8F91\u5668
+JasperReportsToolDesigner=JasperReports\u5DE5\u5177\u8BBE\u8BA1\u5668
+FontExtensionEditor=\u5B57\u4F53\u6269\u5C55\u7F16\u8F91\u5668
+ReportDesign=\u62A5\u544A\u8BBE\u8BA1
+JaspersoftStudio=Jaspersoft\u5DE5\u4F5C\u5BA4
+Exporters=\u5BFC\u51FA\u5668
+PDFExporter=PDF\u5BFC\u51FA\u5668
+HTMLExporter=HTML\u5BFC\u51FA\u5668
+CSVExporter=CSV\u5BFC\u51FA\u5668
+CSVMetadataExporter=CSV\u5143\u6570\u636E\u5BFC\u51FA\u5668
+TextExporter=\u6587\u672C\u5BFC\u51FA\u5668
+ExcelExporter=Excel\u5BFC\u51FA\u5668
+XMLExporter=XML\u5BFC\u51FA\u5668
+DOCXExporter=DOCX\u5BFC\u51FA\u5668
+G2Dxporter=G2D\u5BFC\u51FA\u5668
+Properties=\u5C5E\u6027
+ReportDesignerThemes=\u62A5\u544A\u8BBE\u8BA1\u5668\u4E3B\u9898
+ReportExecution=\u62A5\u544A\u6267\u884C
+Fonts=\u5B57\u4F53
+RulersAndGridPreferences=\u6807\u5C3A\u548C\u7F51\u683C\u9996\u9009\u9879
+ParameterSets=\u53C2\u6570\u96C6
+RepositoryExplorer=\u5B58\u50A8\u5E93\u8D44\u6E90\u7BA1\u7406\u5668
+ReportState=\u62A5\u544A\u72B6\u6001
+TemplateView=\u6A21\u7248\u89C6\u56FE
+TraceReportView=\u8DDF\u8E2A\u62A5\u544A\u89C6\u56FE
+CreateanewJasperReport=\u521B\u5EFA\u65B0\u7684JasperReport
+CreateanewStyleTemplateforJasperReport=\u4E3AJasperReport\u521B\u5EFA\u65B0\u7684\u6837\u5F0F\u6A21\u677F
+CreateanewDataAdapter=\u521B\u5EFA\u65B0\u7684\u6570\u636E\u9002\u914D\u5668
+CreateanewFunctionsLibrary=\u521B\u5EFA\u65B0\u7684\u51FD\u6570\u5E93
+PluginDataAdapter=\u63D2\u4EF6\u6570\u636E\u9002\u914D\u5668
+Createanewdataadapterskeleton=\u521B\u5EFA\u65B0\u7684\u6570\u636E\u9002\u914D\u5668\u6A21\u677F\u4EE3\u7801
+JasperReportsFontsExtension=JasperReports\u5B57\u4F53\u6269\u5C55
+ResetUUIDs=\u91CD\u7F6EUUID
+ReportRepository=\u62A5\u544A\u5E93
+State=\u72B6\u6001
+DataAdapterFile=\u6570\u636E\u9002\u914D\u5668\u6587\u4EF6
+StyleTemplateFile=\u6837\u5F0F\u6A21\u7248\u6587\u4EF6
+ReportRepositoryType=\u62A5\u544A\u5B58\u50A8\u5E93\u7C7B\u578B
+DefaultNosetting=\u9ED8\u8BA4 - \u65E0\u8BBE\u7F6E
+JasperReportsLibrary=JasperReports\u5E93
+ImportDataAdaptersfromiReport=\u4ECEiReport\u5BFC\u5165\u6570\u636E\u9002\u914D\u5668
+ImportDataAdaptersfromanotherJSSWorkspace=\u4ECE\u53E6\u4E00\u4E2AJSS\u5DE5\u4F5C\u533A\u5BFC\u5165\u6570\u636E\u9002\u914D\u5668
+ExportthereportasanewReportTemplate=\u5C06\u62A5\u544A\u5BFC\u51FA\u4E3A\u65B0\u7684\u62A5\u544A\u6A21\u677F
+
