add locate resource

--- a/com.jaspersoft.studio.components/plugin_it.properties
+++ b/com.jaspersoft.studio.components/plugin_it.properties
@@ -6,7 +6,7 @@ ChartCustomizers = Chart Customizer
 
 CrosstabAction = Azioni su Crosstab
 
-MapKey = Chiavi Componente Mappa
+MapComponentKeys = Chiavi Componente Mappa
 
 TableAction = Azioni su Tabelle
 
