--- a/com.jaspersoft.studio.components/plugin_zh.properties
+++ b/com.jaspersoft.studio.components/plugin_zh.properties
@@ -26,5 +26,8 @@ createTabelColBeforeSelected=\u5728\u9009\u5B9A\u5217\u524D\u521B\u5EFA\u65B0\u5
 createTabelColAfterSelected=\u5728\u9009\u5B9A\u5217\u540E\u521B\u5EFA\u65B0\u5217
 TableAction=\u8868\u683C\u64CD\u4F5C
 CrosstabAction=\u4EA4\u53C9\u8868\u64CD\u4F5C
-MapKey=\u5730\u56FE\u7EC4\u4EF6\u952E
+MapComponentKeys=\u5730\u56FE\u7EC4\u4EF6\u5BC6\u94A5\u96C6
 ChartCustomizers=\u56FE\u8868\u5B9A\u5236\u5668
+ChartThemeEditor=\u56FE\u8868\u4E3B\u9898\u7F16\u8F91\u5668
+ChartThemes=\u56FE\u8868\u4E3B\u9898
+CreateanewChartTheme=\u521B\u5EFA\u65B0\u7684\u56FE\u8868\u4E3B\u9898
