--- a/com.jaspersoft.studio.components/src/com/jaspersoft/studio/components/chart/messages/messages.properties
+++ b/com.jaspersoft.studio.components/src/com/jaspersoft/studio/components/chart/messages/messages.properties
@@ -742,3 +742,6 @@ SubTitleSection_1=Expression
 SubTitleSection_2=Color
 TitleSection_0=Title
 TitleSection_1=Expression
+ChartCustomizerClass=Chart Customizer Class
+Selectthedefinitionfile=Select the definition file
+SelecttheChartCustomizerdefinitionfile=Select the Chart Customizer definition file
