--- a/com.jaspersoft.studio.server/plugin_zh.properties
+++ b/com.jaspersoft.studio.server/plugin_zh.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright © 2010-2023. Cloud Software Group, Inc. All rights reserved.
+# Copyright © 2010-2025. Cloud Software Group, Inc. All rights reserved.
 ###############################################################################
 importServers=iReport JasperReports\u670D\u52A1\u5668\u8FDE\u63A5
 importServersJSS=\u5916\u90E8JasperReports\u670D\u52A1\u5668\u8FDE\u63A5
@@ -8,3 +8,15 @@ jrssettings=JasperReports\u670D\u52A1\u5668\u8BBE\u7F6E
 ssosettings=\u5355\u70B9\u767B\u5F55\u670D\u52A1\u5668\u8BBE\u7F6E
 truststore=\u4FE1\u4EFB\u5B58\u50A8
 keystore=\u5BC6\u94A5\u5B58\u50A8
+Resource=\u8D44\u6E90
+Properties=\u5C5E\u6027
+ReportUnitEditor=\u62A5\u544A\u5355\u5143\u7F16\u8F91\u5668
+JaspersoftStudio=Jaspersoft\u5DE5\u4F5C\u5BA4
+ReportToJasperReportsServer=\u62A5\u544A\u53D1\u9001\u5230JasperReports\u670D\u52A1\u5668
+ExportthereporttoJasperReportsServer=\u5BFC\u51FA\u62A5\u544A\u5230JasperReports\u670D\u52A1\u5668
+FileToJasperReportsServer=\u6587\u4EF6\u4F20\u8F93\u81F3JasperReports\u670D\u52A1\u5668
+ExportafiletoJasperReportsServer=\u5C06\u6587\u4EF6\u5BFC\u51FA\u5230JasperReports\u670D\u52A1\u5668
+ImportoneormoreJasperReportServerconnectionsfromapreviuousinstallationofiReport=\u4ECEiReport\u7684\u5148\u524D\u5B89\u88C5\u4E2D\u5BFC\u5165\u4E00\u4E2A\u6216\u591A\u4E2AJasperReport Server\u8FDE\u63A5
+ImportoneormoreJasperReportServerconnectionsfromanotherworkspaceofJSS=\u4ECEJSS\u7684\u53E6\u4E00\u4E2A\u5DE5\u4F5C\u533A\u5BFC\u5165\u4E00\u4E2A\u6216\u591A\u4E2AJasperReport Server\u8FDE\u63A5
+JasperReportsServer=JasperReports\u670D\u52A1\u5668
+JaspersoftServerLibrary=Jaspersoft\u670D\u52A1\u5668\u5E93
