--- a/com.jaspersoft.studio/src/com/jaspersoft/studio/messages/messages.properties
+++ b/com.jaspersoft.studio/src/com/jaspersoft/studio/messages/messages.properties
@@ -2672,3 +2672,8 @@ RandomDataAdapterComposite_0=Number of records
 RandomDataAdapterDescriptor_0=Random Records 
 RandomDataAdapterFactory_0=Random records
 RandomDataAdapterFactory_1=Random records data adapter.
+
+Locationwhereyoucouldhavedifferentresources=Location where you could have different resources
+ChoosealocationfortheDataAdapterConfigurationsDefinitions=Choose a location for the Data Adapter Configurations Definitions
+ConfigurationsLocation=Configurations Location
+SelectaConfigurationFile=Select a Configuration File
