--- a/com.jaspersoft.studio.components/src/com/jaspersoft/studio/components/chart/messages/messages_zh.properties
+++ b/com.jaspersoft.studio.components/src/com/jaspersoft/studio/components/chart/messages/messages_zh.properties
@@ -742,3 +742,6 @@ SubTitleSection_1=\u8868\u8FBE\u5F0F
 SubTitleSection_2=\u989C\u8272
 TitleSection_0=\u6807\u9898
 TitleSection_1=\u8868\u8FBE\u5F0F
+ChartCustomizerClass=\u56FE\u8868\u81EA\u5B9A\u4E49\u7C7B
+Selectthedefinitionfile=\u9009\u62E9\u5B9A\u4E49\u6587\u4EF6
+SelecttheChartCustomizerdefinitionfile=\u9009\u62E9\u56FE\u8868\u81EA\u5B9A\u4E49\u5B9A\u4E49\u6587\u4EF6
