--- a/com.jaspersoft.studio/src/com/jaspersoft/studio/messages/messages_zh.properties
+++ b/com.jaspersoft.studio/src/com/jaspersoft/studio/messages/messages_zh.properties
@@ -2672,3 +2672,8 @@ RandomDataAdapterComposite_0=\u8BB0\u5F55\u6570
 RandomDataAdapterDescriptor_0=\u968F\u673A\u8BB0\u5F55
 RandomDataAdapterFactory_0=\u968F\u673A\u8BB0\u5F55
 RandomDataAdapterFactory_1=\u968F\u673A\u8BB0\u5F55\u6570\u636E\u9002\u914D\u5668\u3002
+
+Locationwhereyoucouldhavedifferentresources=\u60A8\u53EF\u4EE5\u62E5\u6709\u4E0D\u540C\u8D44\u6E90\u7684\u4F4D\u7F6E
+ChoosealocationfortheDataAdapterConfigurationsDefinitions=\u9009\u62E9\u6570\u636E\u9002\u914D\u5668\u914D\u7F6E\u5B9A\u4E49\u7684\u4F4D\u7F6E
+ConfigurationsLocation=\u914D\u7F6E\u4F4D\u7F6E
+SelectaConfigurationFile=\u9009\u62E9\u914D\u7F6E\u6587\u4EF6
