--- a/com.jaspersoft.studio.components.customvisualization/plugin_zh.properties
+++ b/com.jaspersoft.studio.components.customvisualization/plugin_zh.properties
@@ -6,3 +6,8 @@ buildComponents=\u6784\u5EFA\u6240\u6709\u7EC4\u4EF6
 newComponentWizardDescription=\u521B\u5EFA\u81EA\u5B9A\u4E49\u53EF\u89C6\u5316\u7EC4\u4EF6\u7684\u6846\u67B6
 propertyTab = \u6570\u636E
 ComponentDescriptors=\u81EA\u5B9A\u4E49\u53EF\u89C6\u5316\u7EC4\u4EF6
+CustomVisualizationComponent=\u81EA\u5B9A\u4E49\u53EF\u89C6\u5316\u7EC4\u4EF6
+JaspersoftStudio=Jaspersoft\u5DE5\u4F5C\u5BA4
+ItemPropertyEditor=\u9879\u76EE\u5C5E\u6027\u7F16\u8F91\u5668
+CVCNature=CVC\u57FA\u672C\u7279\u5F81
+CVCBuilder=CCVC\u6784\u5EFA\u5668
