--- a/com.jaspersoft.studio.components/src/com/jaspersoft/studio/components/chart/messages/messages.properties
+++ b/com.jaspersoft.studio.components/src/com/jaspersoft/studio/components/chart/messages/messages.properties
@@ -745,3 +745,4 @@ TitleSection_1=Expression
 ChartCustomizerClass=Chart Customizer Class
 Selectthedefinitionfile=Select the definition file
 SelecttheChartCustomizerdefinitionfile=Select the Chart Customizer definition file
+SelectDestinationDialog=Select Destination Dialog
