--- a/com.jaspersoft.studio/src/com/jaspersoft/studio/messages/messages.properties
+++ b/com.jaspersoft.studio/src/com/jaspersoft/studio/messages/messages.properties
@@ -2677,3 +2677,27 @@ Locationwhereyoucouldhavedifferentresources=Location where you could have differ
 ChoosealocationfortheDataAdapterConfigurationsDefinitions=Choose a location for the Data Adapter Configurations Definitions
 ConfigurationsLocation=Configurations Location
 SelectaConfigurationFile=Select a Configuration File
+
+ParameterSet=Parameter Set
+Namecantbeempty=Name can't be empty
+Thisnamealreadyexistspleaseselectanotherone=This name already exists, please select another one
+Name=Name
+Description=Description
+Parameters=Parameters
+
+RunreportonDataAdapterchange=Run report on Data Adapter change
+RunreportonDataAdapterchangeTooltip=Run report on Data Adapter change
+Calculatedaterangesforinputparametersusingsystemtimezone=Calculate date ranges for input parameters using system time zone
+CalculatedaterangesforinputparametersusingsystemtimezoneTooltip=Calculates date ranges for input parameters using the system time zone. Set to false to use the time zone set in the\uFFFDreport\uFFFD(REPORT_TIME_ZONE).
+
+BindingsPreferencePageName=Name
+BindingsPreferencePageBinding=Binding
+BindingsPreferencePageWhen=When
+BindingsPreferencePageDescription=Description
+BindingsPreferencePageConflicts=Conflicts
+BindingsPreferencePageConflictingBinding=Conflicting Binding
+BindingsPreferencePageOrigin=Origin
+BindingsPreferencePageEclipse=Eclipse
+BindingsPreferencePageJaspersoftStudio=Jaspersoft Studio
+BindingsPreferencePageUnbindCommand=Unbind Command
+BindingsPreferencePageRestoreDefault=Restore Default
