--- a/com.jaspersoft.studio.components/src/com/jaspersoft/studio/components/chart/messages/messages_zh.properties
+++ b/com.jaspersoft.studio.components/src/com/jaspersoft/studio/components/chart/messages/messages_zh.properties
@@ -745,3 +745,4 @@ TitleSection_1=\u8868\u8FBE\u5F0F
 ChartCustomizerClass=\u56FE\u8868\u81EA\u5B9A\u4E49\u7C7B
 Selectthedefinitionfile=\u9009\u62E9\u5B9A\u4E49\u6587\u4EF6
 SelecttheChartCustomizerdefinitionfile=\u9009\u62E9\u56FE\u8868\u81EA\u5B9A\u4E49\u5B9A\u4E49\u6587\u4EF6
+SelectDestinationDialog=\u9009\u62E9\u76EE\u7684\u5BF9\u8BDD\u6846
