--- a/com.jaspersoft.studio.rcp/plugin_zh.properties
+++ b/com.jaspersoft.studio.rcp/plugin_zh.properties
@@ -21,3 +21,4 @@ activity.javadevel.name = Java \u5F00\u53D1
 category.languages.name = \u8BED\u8A00
 command.languages.name = \u8BED\u8A00
 commandParameter.languages.name = \u672C\u5730\u5316
+aboutText=Jaspersoft® Studio 6.20.6 - JasperReports 6.20.6\u7248\u672C\u53EF\u89C6\u5316\u7F16\u8F91\u5668\u3002 \n\u7248\u6743\u6240\u6709 (C) 2010 - 2025 Cloud Software Group\uFF0C Inc\u3002 \u5168\u6743\u6240\u6709\u3002 \n\n\u60F3\u83B7\u53D6\u66F4\u591A\u4FE1\u606F\uFF0C\u8BF7\u8BBF\u95EE \nhttps://community.jaspersoft.com/project/jaspersoft-studio  \n\n\u7279\u522B\u611F\u8C22\u652F\u6301\u8FD9\u4E2A\u8F6F\u4EF6\u7684\u4F7F\u7528\u8005\u3002
