--- a/com.jaspersoft.studio.server/src/com/jaspersoft/studio/server/messages/messages.properties
+++ b/com.jaspersoft.studio.server/src/com/jaspersoft/studio/server/messages/messages.properties
@@ -482,3 +482,7 @@ UsernameValidator_ErrorMsgNotAllowedChars=The following characters are not suppo
 UsernameValidator_ErrorMsgUsernameTooLong=Username is too long, max 100 chars
 WSClient_errorWithMessage=The Server has returned an error with code {0} and with the message {1}
 WSClient_errorWithoutMessage=The Server has returned an error with code {0} but without any message
+DefaultMainReportLabel=Default Main Report Label
+DefaultMainReportName=Default Main Report Name
+Type=Type
+SSOServer=SSO Server
