--- a/com.jaspersoft.studio.server/src/com/jaspersoft/studio/server/messages/messages_zh.properties
+++ b/com.jaspersoft.studio.server/src/com/jaspersoft/studio/server/messages/messages_zh.properties
@@ -482,3 +482,7 @@ UsernameValidator_ErrorMsgNotAllowedChars=\u4E0D\u652F\u6301\u4EE5\u4E0B\u5B57\u
 UsernameValidator_ErrorMsgUsernameTooLong=\u7528\u6237\u540D\u8FC7\u957F\uFF0C\u6700\u591A 100 \u4E2A\u5B57\u7B26
 WSClient_errorWithMessage=\u670D\u52A1\u5668\u8FD4\u56DE\u9519\u8BEF\uFF0C\u4EE3\u7801 {0}\uFF0C\u6D88\u606F {1}
 WSClient_errorWithoutMessage=\u670D\u52A1\u5668\u8FD4\u56DE\u9519\u8BEF\uFF0C\u4EE3\u7801 {0}\uFF0C\u4F46\u65E0\u4EFB\u4F55\u6D88\u606F
+DefaultMainReportLabel=\u9ED8\u8BA4\u4E3B\u62A5\u544A\u6807\u7B7E
+DefaultMainReportName=\u9ED8\u8BA4\u4E3B\u62A5\u544A\u540D\u79F0
+Type=\u7C7B\u578B
+SSOServer=SSO\u670D\u52A1\u5668
