--- a/com.jaspersoft.studio/plugin_zh.properties
+++ b/com.jaspersoft.studio/plugin_zh.properties
@@ -213,3 +213,6 @@ JasperReportsLibrary=JasperReports\u5E93
 ImportDataAdaptersfromiReport=\u4ECEiReport\u5BFC\u5165\u6570\u636E\u9002\u914D\u5668
 ImportDataAdaptersfromanotherJSSWorkspace=\u4ECE\u53E6\u4E00\u4E2AJSS\u5DE5\u4F5C\u533A\u5BFC\u5165\u6570\u636E\u9002\u914D\u5668
 ExportthereportasanewReportTemplate=\u5C06\u62A5\u544A\u5BFC\u51FA\u4E3A\u65B0\u7684\u62A5\u544A\u6A21\u677F
+Selecting=\u9009\u62E9\u4E2D
+Dragging=\u62D6\u62FD\u4E2D
+ElementsSelected=\u5143\u7D20\u9009\u62E9
