--- a/com.jaspersoft.studio/src/com/jaspersoft/studio/messages/messages_zh.properties
+++ b/com.jaspersoft.studio/src/com/jaspersoft/studio/messages/messages_zh.properties
@@ -2677,3 +2677,27 @@ Locationwhereyoucouldhavedifferentresources=\u60A8\u53EF\u4EE5\u62E5\u6709\u4E0D
 ChoosealocationfortheDataAdapterConfigurationsDefinitions=\u9009\u62E9\u6570\u636E\u9002\u914D\u5668\u914D\u7F6E\u5B9A\u4E49\u7684\u4F4D\u7F6E
 ConfigurationsLocation=\u914D\u7F6E\u4F4D\u7F6E
 SelectaConfigurationFile=\u9009\u62E9\u914D\u7F6E\u6587\u4EF6
+
+ParameterSet=\u53C2\u6570\u96C6
+Namecantbeempty=\u540D\u79F0\u4E0D\u80FD\u4E3A\u7A7A
+Thisnamealreadyexistspleaseselectanotherone=\u540D\u79F0\u5DF2\u7ECF\u5B58\u5728\uFF0C\u8BF7\u9009\u62E9\u5176\u4ED6\u540D\u79F0
+Name=\u540D\u79F0
+Description=\u63CF\u8FF0
+Parameters=\u53C2\u6570\u96C6
+
+RunreportonDataAdapterchange=\u8FD0\u884C\u6570\u636E\u9002\u914D\u5668\u66F4\u6539\u62A5\u544A
+RunreportonDataAdapterchangeTooltip=\u8FD0\u884C\u6570\u636E\u9002\u914D\u5668\u66F4\u6539\u62A5\u544A
+Calculatedaterangesforinputparametersusingsystemtimezone=\u4F7F\u7528\u7CFB\u7EDF\u65F6\u533A\u8BA1\u7B97\u8F93\u5165\u53C2\u6570\u7684\u65E5\u671F\u8303\u56F4
+CalculatedaterangesforinputparametersusingsystemtimezoneTooltip=\u4F7F\u7528\u7CFB\u7EDF\u65F6\u533A\u8BA1\u7B97\u8F93\u5165\u53C2\u6570\u7684\u65E5\u671F\u8303\u56F4\u3002\u8BBE\u7F6E\u4E3Afalse\u4EE5\u4F7F\u7528\u62A5\u544A\u4E2D\u8BBE\u7F6E\u7684\u65F6\u533A\uFF08REPORT_TIME_ZONE\uFF09\u3002
+
+BindingsPreferencePageName=\u540D\u79F0
+BindingsPreferencePageBinding=\u7ED1\u5B9A
+BindingsPreferencePageWhen=\u4F55\u65F6
+BindingsPreferencePageDescription=\u63CF\u8FF0
+BindingsPreferencePageConflicts=\u51B2\u7A81
+BindingsPreferencePageConflictingBinding=\u7ED1\u5B9A\u51B2\u7A81
+BindingsPreferencePageOrigin=\u6765\u6E90
+BindingsPreferencePageEclipse=Eclipse\u5E73\u53F0
+BindingsPreferencePageJaspersoftStudio=Jaspersoft\u5DE5\u4F5C\u5BA4
+BindingsPreferencePageUnbindCommand=\u89E3\u7ED1\u547D\u4EE4
+BindingsPreferencePageRestoreDefault=\u6062\u590D\u9ED8\u8BA4
