add JSON Header Overrides

--- a/eclipse.plugin.aiassistant/src/eclipse/plugin/aiassistant/messages/messages.properties
+++ b/eclipse.plugin.aiassistant/src/eclipse/plugin/aiassistant/messages/messages.properties
@@ -49,6 +49,7 @@ ModelName=Model Name:
 APIURL=API URL:
 APIKey=API Key:
 JSONOverrides=JSON Overrides:
+JSONHeaderOverrides=JSON Header Overrides:
 UseStreaming=Use Streaming
 SystemMessage=System Message
 DeveloperMessage=Developer Message
@@ -56,6 +57,7 @@ DeveloperMessage=Developer Message
 TableColumnModelName=Model Name
 TableColumnAPIURL=API URL
 TableColumnJSONOverrides=JSON Overrides
+TableColumnJSONHeaderOverrides=JSON Header Overrides
 TableColumnStreaming=Streaming
 TableColumnSystem=System
 TableColumnDeveloper=Developer
