--- a/eclipse.plugin.aiassistant/src/eclipse/plugin/aiassistant/messages/messages_zh.properties
+++ b/eclipse.plugin.aiassistant/src/eclipse/plugin/aiassistant/messages/messages_zh.properties
@@ -49,6 +49,7 @@ ModelName=\u6A21\u578B\u540D\u79F0:
 APIURL=API\u7F51\u5740:
 APIKey=API\u5BC6\u7801:
 JSONOverrides=JSON\u8986\u76D6:
+JSONHeaderOverrides=JSON\u5934\u8986\u76D6:
 UseStreaming=\u4F7F\u7528\u6D41
 SystemMessage=\u7CFB\u7EDF\u6D88\u606F
 DeveloperMessage=\u5F00\u53D1\u8005\u6D88\u606F
@@ -56,6 +57,7 @@ DeveloperMessage=\u5F00\u53D1\u8005\u6D88\u606F
 TableColumnModelName=\u6A21\u578B\u540D\u79F0
 TableColumnAPIURL=API\u7F51\u5740
 TableColumnJSONOverrides=JSON\u8986\u76D6
+TableColumnJSONHeaderOverrides=JSON\u5934\u8986\u76D6
 TableColumnStreaming=\u6D41
 TableColumnSystem=\u7CFB\u7EDF
 TableColumnDeveloper=\u5F00\u53D1\u8005
