--- a/eclipse.plugin.aiassistant/src/eclipse/plugin/aiassistant/messages/messages.properties
+++ b/eclipse.plugin.aiassistant/src/eclipse/plugin/aiassistant/messages/messages.properties
@@ -45,6 +45,7 @@ UserInputFontSize=User Input Font Size:
 StreamingIntervalms=Streaming Interval (ms):
 DisableTooltips=Disable Tooltips
 
+NickName=Nick Name:
 ModelName=Model Name:
 APIURL=API URL:
 APIKey=API Key:
@@ -54,6 +55,7 @@ UseStreaming=Use Streaming
 SystemMessage=System Message
 DeveloperMessage=Developer Message
 
+TableColumnNickName=Nick Name
 TableColumnModelName=Model Name
 TableColumnAPIURL=API URL
 TableColumnJSONOverrides=JSON Overrides
