--- a/eclipse.plugin.aiassistant/src/eclipse/plugin/aiassistant/messages/messages_zh.properties
+++ b/eclipse.plugin.aiassistant/src/eclipse/plugin/aiassistant/messages/messages_zh.properties
@@ -45,6 +45,7 @@ UserInputFontSize=\u7528\u6237\u8F93\u5165\u5B57\u4F53\u5927\u5C0F:
 StreamingIntervalms=\u6D41\u95F4\u9694(\u6BEB\u79D2):
 DisableTooltips=\u7981\u7528\u5DE5\u5177\u63D0\u793A
 
+NickName=\u6635\u79F0:
 ModelName=\u6A21\u578B\u540D\u79F0:
 APIURL=API\u7F51\u5740:
 APIKey=API\u5BC6\u7801:
@@ -54,6 +55,7 @@ UseStreaming=\u4F7F\u7528\u6D41
 SystemMessage=\u7CFB\u7EDF\u6D88\u606F
 DeveloperMessage=\u5F00\u53D1\u8005\u6D88\u606F
 
+TableColumnNickName=\u6635\u79F0
 TableColumnModelName=\u6A21\u578B\u540D\u79F0
 TableColumnAPIURL=API\u7F51\u5740
 TableColumnJSONOverrides=JSON\u8986\u76D6
