ai assistant upgrade

--- a/com.jaspersoft.studio/src/com/jaspersoft/studio/messages/messages.properties
+++ b/com.jaspersoft.studio/src/com/jaspersoft/studio/messages/messages.properties
@@ -2701,3 +2701,7 @@ BindingsPreferencePageEclipse=Eclipse
 BindingsPreferencePageJaspersoftStudio=Jaspersoft Studio
 BindingsPreferencePageUnbindCommand=Unbind Command
 BindingsPreferencePageRestoreDefault=Restore Default
+
+VErrorPreview_DataQueriedAt=Data Queried At
+VErrorPreview_UsedDataFromSnapshot=Used Data From Snapshot
+VErrorPreview_DataSnapshotFile=Data Snapshot File
