--- a/com.jaspersoft.studio/src/com/jaspersoft/studio/messages/messages_zh.properties
+++ b/com.jaspersoft.studio/src/com/jaspersoft/studio/messages/messages_zh.properties
@@ -1207,8 +1207,8 @@ JRXmlWriterHelper_0=\u7248\u672C_
 JRXmlWriterHelper_1=\u59CB\u7EC8\u4F7F\u7528\u5F53\u524D\u7248\u672C
 JRXmlWriterHelper_4=\ (\u5F53\u524D)
 JRXmlWriterHelper_9=\ \u4F7F\u7528JasperReports\u5E93\u7248\u672C
-JrxmlEditor_design=\u8BBE\u8BA1
-JrxmlEditor_preview=\u9884\u89C8
+JrxmlEditor_design=\u8BBE\u8BA1\u5668
+JrxmlEditor_preview=\u9884\u89C8\u5668
 JrxmlEditorContributor_grid_size=\u7F51\u683C\u5927\u5C0F...
 JrxmlEditorContributor_show_ruler=\u663E\u793A\u6807\u5C3A
 JrxmlEditorContributor_view=\u89C6\u56FE
@@ -2701,3 +2701,7 @@ BindingsPreferencePageEclipse=Eclipse\u5E73\u53F0
 BindingsPreferencePageJaspersoftStudio=Jaspersoft\u5DE5\u4F5C\u5BA4
 BindingsPreferencePageUnbindCommand=\u89E3\u7ED1\u547D\u4EE4
 BindingsPreferencePageRestoreDefault=\u6062\u590D\u9ED8\u8BA4
+
+VErrorPreview_DataQueriedAt=\u6570\u636E\u67E5\u8BE2\u4E8E
+VErrorPreview_UsedDataFromSnapshot=\u5FEB\u7167\u4E2D\u7684\u5DF2\u7528\u6570\u636E
+VErrorPreview_DataSnapshotFile=\u6570\u636E\u5FEB\u7167\u6587\u4EF6
