--- a/eclipse.plugin.aiassistant/src/eclipse/plugin/aiassistant/messages/messages.properties
+++ b/eclipse.plugin.aiassistant/src/eclipse/plugin/aiassistant/messages/messages.properties
@@ -6,8 +6,27 @@ NewConversation=New Conversation
 PreviousTab=Previous Tab
 NextTab=Next Tab
 NewTab=New Tab
-CloneTab=Clone Tab
+CloneCurrentTab=Clone Current Tab
 CloseAllTabs=Close All Tabs
+
+Discuss=Discuss
+DiscussTooltip=Discuss the Code
+Explain=Explain
+ExplainTooltip=Explain the Code
+CodeReview=Code Review
+CodeReviewTooltip=Suggest Improvements to the Code
+BestPractices=Best Practices
+BestPracticesTooltip=Check for Adherence to Best Practices
+Robustify=Robustify
+RobustifyTooltip=Suggest Ways to Improve Error Handling
+Optimize=Optimize
+OptimizeTooltip=Suggest Ways to Optimize the Code
+Debug=Debug
+DebugTooltip=Try to Find Bugs in the Code
+Refactor=Refactor
+RefactorTooltip=Refactor the Code
+WriteComments=Write Comments
+WriteCommentsTooltip=Document the Code
 
 ARROW_UP_TOOLTIP=Older User Messages
 ARROW_DOWN_TOOLTIP=Newer User Messages
