--- a/eclipse.plugin.aiassistant/src/eclipse/plugin/aiassistant/messages/messages_zh.properties
+++ b/eclipse.plugin.aiassistant/src/eclipse/plugin/aiassistant/messages/messages_zh.properties
@@ -6,8 +6,27 @@ NewConversation=\u65B0\u4F1A\u8BDD
 PreviousTab=\u4E0A\u4E00\u4E2A\u9009\u9879\u5361
 NextTab=\u4E0B\u4E00\u4E2A\u9009\u9879\u5361
 NewTab=\u65B0\u9009\u9879\u5361
-CloneTab=\u514B\u9686\u9009\u9879\u5361
+CloneCurrentTab=\u514B\u9686\u5F53\u524D\u9009\u9879\u5361
 CloseAllTabs=\u5173\u95ED\u6240\u6709\u9009\u9879\u5361
+
+Discuss=\u8BA8\u8BBA
+DiscussTooltip=\u8BA8\u8BBA\u4EE3\u7801
+Explain=\u89E3\u91CA
+ExplainTooltip=\u89E3\u91CA\u4EE3\u7801
+CodeReview=\u4EE3\u7801\u5BA1\u67E5
+CodeReviewTooltip=\u5BF9\u4EE3\u7801\u63D0\u51FA\u6539\u8FDB\u5EFA\u8BAE
+BestPractices=\u6700\u4F73\u5B9E\u8DF5
+BestPracticesTooltip=\u68C0\u67E5\u662F\u5426\u9075\u5B88\u6700\u4F73\u5B9E\u8DF5
+Robustify=\u9C81\u68D2\u4F18\u5316
+RobustifyTooltip=\u5EFA\u8BAE\u6539\u8FDB\u9519\u8BEF\u5904\u7406\u7684\u65B9\u6CD5
+Optimize=\u4F18\u5316
+OptimizeTooltip=\u5EFA\u8BAE\u4F18\u5316\u4EE3\u7801\u7684\u65B9\u6CD5
+Debug=\u8C03\u8BD5
+DebugTooltip=\u5C1D\u8BD5\u67E5\u627E\u4EE3\u7801\u4E2D\u7684Bug
+Refactor=\u91CD\u6784
+RefactorTooltip=\u91CD\u6784\u4EE3\u7801
+WriteComments=\u7F16\u5199\u6CE8\u91CA
+WriteCommentsTooltip=\u4EE3\u7801\u6587\u6863\u5316
 
 ARROW_UP_TOOLTIP=\u8F83\u65E7\u7684\u7528\u6237\u6D88\u606F
 ARROW_DOWN_TOOLTIP=\u8F83\u65B0\u7684\u7528\u6237\u6D88\u606F
