add chinese rsources

--- a/com.jaspersoft.studio.babel.editor/src/org/eclipse/babel/messages/messages.properties
+++ b/com.jaspersoft.studio.babel.editor/src/org/eclipse/babel/messages/messages.properties
@@ -107,3 +107,4 @@ selector_variant  = Variant
 translation_wiz_title = New Translation Project
 translation_wiz_description = Define a name for the new Translation project
 translation_wiz_name = Project Name
+LocalizationEditorSearch=Localization Editor Search...
