--- a/com.jaspersoft.studio.babel.editor/src/org/eclipse/babel/messages/messages_zh.properties
+++ b/com.jaspersoft.studio.babel.editor/src/org/eclipse/babel/messages/messages_zh.properties
@@ -107,3 +107,4 @@ selector_variant  = \u53D8\u4F53
 translation_wiz_title = \u65B0\u5EFA\u7FFB\u8BD1\u9879\u76EE
 translation_wiz_description = \u4E3A\u65B0\u7FFB\u8BD1\u9879\u76EE\u5B9A\u4E49\u540D\u79F0
 translation_wiz_name = \u9879\u76EE\u540D\u79F0
+LocalizationEditorSearch=\u672C\u5730\u5316\u7F16\u8F91\u5668\u641C\u7D22...
