--- a/com.jaspersoft.studio.book/src/com/jaspersoft/studio/book/messages/messages.properties
+++ b/com.jaspersoft.studio.book/src/com/jaspersoft/studio/book/messages/messages.properties
@@ -48,3 +48,4 @@ PartPropertyEditor_wizardTitle=Report Part Parameters
 ReportPartSection_advancedLabel=Advanced
 SPPartParametersButton_parametersButton=Edit Parameters
 SPPartReturnValuesButton_returnValuesButton=Edit Return Values
+CompilingSubreports=Compiling Subreports
