--- a/com.jaspersoft.studio.book/src/com/jaspersoft/studio/book/messages/messages_zh.properties
+++ b/com.jaspersoft.studio.book/src/com/jaspersoft/studio/book/messages/messages_zh.properties
@@ -48,3 +48,4 @@ PartPropertyEditor_wizardTitle=\u62A5\u8868\u90E8\u5206\u53C2\u6570
 ReportPartSection_advancedLabel=\u9AD8\u7EA7
 SPPartParametersButton_parametersButton=\u7F16\u8F91\u53C2\u6570
 SPPartReturnValuesButton_returnValuesButton=\u7F16\u8F91\u8FD4\u56DE\u503C
+CompilingSubreports=\u6B63\u5728\u7F16\u8BD1\u5B50\u62A5\u544A
