--- a/com.jaspersoft.studio.components.customvisualization/src/com/jaspersoft/studio/components/customvisualization/messages/messages.properties
+++ b/com.jaspersoft.studio.components.customvisualization/src/com/jaspersoft/studio/components/customvisualization/messages/messages.properties
@@ -104,3 +104,6 @@ CustomVisualizationComponentTablePage_errorEmpty=The project name can not be emp
 CustomVisualizationComponentTablePage_errorInvalidGeneric=The project name is not valid
 CustomVisualizationComponentTablePage_errorProjectExist=A project with the same name already exist
 UIManager_2=Error occurred while loading url {0}.
+CreatingCVCComponentProject=Creating CVC Component Project
+Compiling=Compiling
+Compilingjob=Compiling job
