--- a/com.jaspersoft.studio.components.customvisualization/src/com/jaspersoft/studio/components/customvisualization/messages/messages_zh.properties
+++ b/com.jaspersoft.studio.components.customvisualization/src/com/jaspersoft/studio/components/customvisualization/messages/messages_zh.properties
@@ -104,3 +104,6 @@ CustomVisualizationComponentTablePage_errorEmpty=\u9879\u76EE\u540D\u79F0\u4E0D\
 CustomVisualizationComponentTablePage_errorInvalidGeneric=\u9879\u76EE\u540D\u79F0\u65E0\u6548
 CustomVisualizationComponentTablePage_errorProjectExist=\u5DF2\u5B58\u5728\u540C\u540D\u9879\u76EE
 UIManager_2=\u52A0\u8F7D URL {0} \u65F6\u53D1\u751F\u9519\u8BEF\u3002
+CreatingCVCComponentProject=\u521B\u5EFACVC\u7EC4\u4EF6\u9879\u76EE
+Compiling=\u6B63\u5728\u7F16\u8BD1
+Compilingjob=\u6B63\u5728\u7F16\u8BD1\u4F5C\u4E1A
