--- a/com.jaspersoft.studio.components/src/com/jaspersoft/studio/components/chart/messages/messages.properties
+++ b/com.jaspersoft.studio.components/src/com/jaspersoft/studio/components/chart/messages/messages.properties
@@ -746,3 +746,6 @@ ChartCustomizerClass=Chart Customizer Class
 Selectthedefinitionfile=Select the definition file
 SelecttheChartCustomizerdefinitionfile=Select the Chart Customizer definition file
 SelectDestinationDialog=Select Destination Dialog
+ExportingChartThemestoaJAR=Exporting Chart Themes to a JAR
+Creating=Creating
+Openingfileforediting=Opening file for editing...
