--- a/com.jaspersoft.studio.data/src/com/jaspersoft/studio/data/messages/messages.properties
+++ b/com.jaspersoft.studio.data/src/com/jaspersoft/studio/data/messages/messages.properties
@@ -251,3 +251,5 @@ XPathQueryDesigner_TaskTitle=Loading XML resource...
 XPathQueryDesigner_XmlLoaderJobName=XML Resource Loader Job
 XPathWizardDataEditorComposite_RefreshJobTitle=Refresh panel job
 XPathWizardDataEditorComposite_TaskName=Decorating...
+Testingdriver=Testing driver
+InitHttpbuiltinparameters=Init Http built-in parameters
