--- a/com.jaspersoft.studio.data/src/com/jaspersoft/studio/data/messages/messages_zh.properties
+++ b/com.jaspersoft.studio.data/src/com/jaspersoft/studio/data/messages/messages_zh.properties
@@ -251,3 +251,5 @@ XPathQueryDesigner_TaskTitle=\u6B63\u5728\u52A0\u8F7DXML\u8D44\u6E90...
 XPathQueryDesigner_XmlLoaderJobName=XML\u8D44\u6E90\u52A0\u8F7D\u5668\u4F5C\u4E1A
 XPathWizardDataEditorComposite_RefreshJobTitle=\u5237\u65B0\u9762\u677F\u4F5C\u4E1A
 XPathWizardDataEditorComposite_TaskName=\u6B63\u5728\u88C5\u9970...
+Testingdriver=\u6B63\u5728\u6D4B\u8BD5\u9A71\u52A8
+InitHttpbuiltinparameters=\u521D\u59CB\u5316Http\u5185\u7F6E\u53C2\u6570
