--- a/com.jaspersoft.studio.rcp/src/com/jaspersoft/studio/rcp/messages/messages.properties
+++ b/com.jaspersoft.studio.rcp/src/com/jaspersoft/studio/rcp/messages/messages.properties
@@ -55,3 +55,4 @@ WorkspaceUtils_WarningDialogMsg2=Updating the workspace can make it incompatible
 WorkspaceUtils_WarningDialogMsg3=If you plan to use also previous versions of Jaspersoft Studio it is advisable to choose a different workspace.\n\n
 WorkspaceUtils_WarningDialogMsg4=Do you want to choose a new workspace?
 WorkspaceUtils_WarningDialogTitle=Older Workspace Version
+Preferencessetting=Preferences setting
