--- a/com.jaspersoft.studio.rcp/src/com/jaspersoft/studio/rcp/messages/messages_zh.properties
+++ b/com.jaspersoft.studio.rcp/src/com/jaspersoft/studio/rcp/messages/messages_zh.properties
@@ -55,3 +55,4 @@ WorkspaceUtils_WarningDialogMsg2=\u66F4\u65B0\u5DE5\u4F5C\u533A\u53EF\u80FD\u4F1
 WorkspaceUtils_WarningDialogMsg3=\u5982\u679C\u60A8\u8FD8\u8BA1\u5212\u4F7F\u7528\u4EE5\u524D\u7248\u672C\u7684Jaspersoft Studio\uFF0C\u5EFA\u8BAE\u60A8\u9009\u62E9\u5176\u4ED6\u5DE5\u4F5C\u533A.\n\n
 WorkspaceUtils_WarningDialogMsg4=\u60A8\u8981\u9009\u62E9\u4E00\u4E2A\u65B0\u7684\u5DE5\u4F5C\u7A7A\u95F4?
 WorkspaceUtils_WarningDialogTitle=\u65E7\u7684\u5DE5\u4F5C\u7A7A\u95F4\u7248\u672C
+Preferencessetting=\u9996\u9009\u9879\u8BBE\u7F6E
