--- a/com.jaspersoft.studio.server/src/com/jaspersoft/studio/server/messages/messages.properties
+++ b/com.jaspersoft.studio.server/src/com/jaspersoft/studio/server/messages/messages.properties
@@ -486,3 +486,19 @@ DefaultMainReportLabel=Default Main Report Label
 DefaultMainReportName=Default Main Report Name
 Type=Type
 SSOServer=SSO Server
+Copyresources=Copy resources
+Resolvingreference=Resolving reference
+Movingelements=Moving elements
+UpdateCascadingInputControls=Update Cascading Input Controls
+UpdateControls=Update Controls
+Lookingintorepository=Looking into repository
+Saving=Saving
+Testingconnection=Testing connection
+Connecting=Connecting
+Canceling=Canceling
+Buildingreport=Building report
+UpdateReportOptions=Update Report Options
+Validating=Validating
+InitJRSbuiltinparameters=Init JRS built-in parameters
+Refreshingtree=Refreshing tree
+Uploadingdrivers=Uploading drivers
