--- a/com.jaspersoft.studio.svgimporter/src/com/jaspersoft/studio/svgimporter/messages/messages.properties
+++ b/com.jaspersoft.studio.svgimporter/src/com/jaspersoft/studio/svgimporter/messages/messages.properties
@@ -9,3 +9,4 @@ InkscapeMessageDialog_dialogTitle=Inkscape Not Found
 InkscapeMessageDialog_fileDialogTitle=Select the Inkscape folder
 InkscapeMessageDialog_partentLabel=Inkscape parent folder
 InkscapeMessageDialog_retryOption=Retry
+Compilingjob=Compiling job
