--- a/com.jaspersoft.studio.svgimporter/src/com/jaspersoft/studio/svgimporter/messages/messages_zh.properties
+++ b/com.jaspersoft.studio.svgimporter/src/com/jaspersoft/studio/svgimporter/messages/messages_zh.properties
@@ -9,3 +9,4 @@ InkscapeMessageDialog_dialogTitle=\u672A\u627E\u5230Inkscape
 InkscapeMessageDialog_fileDialogTitle=\u9009\u62E9Inkscape\u6587\u4EF6\u5939
 InkscapeMessageDialog_partentLabel=Inkscape\u7236\u6587\u4EF6\u5939
 InkscapeMessageDialog_retryOption=\u91CD\u8BD5
+Compilingjob=\u6B63\u5728\u7F16\u8BD1\u4F5C\u4E1A
