--- a/com.jaspersoft.studio/src/com/jaspersoft/studio/messages/messages.properties
+++ b/com.jaspersoft.studio/src/com/jaspersoft/studio/messages/messages.properties
@@ -2705,3 +2705,30 @@ BindingsPreferencePageRestoreDefault=Restore Default
 VErrorPreview_DataQueriedAt=Data Queried At
 VErrorPreview_UsedDataFromSnapshot=Used Data From Snapshot
 VErrorPreview_DataSnapshotFile=Data Snapshot File
+
+Forminitialisation=Form initialisation
+Cleaningproject=Cleaning project
+TestingDataAdapter=Testing Data Adapter
+Creating=Creating
+Exportingresources=Exporting resources
+RestoringResources=Restoring Resources
+PrintingtheReport=Printing the Report
+Savingsnapshotto=Saving snapshot to
+Savingdatasnapshotto=Saving data snapshot to
+Creatingfontsextensionfile=Creating fonts extension file
+UpdateStylesTab=Update Styles Tab
+ResetreportUUIDs=Reset report UUIDs
+LoadingJRextensions=Loading JR extensions
+Processingpleasewait=Processing, please wait
+Postfilechange=Post file change
+VerifyStyles=Verify Styles
+loadmap=load map
+loadimage=load image
+refreshwidgets=refresh widgets
+Cratingproject=Crating project
+Openingfileforediting=Opening file for editing...
+Openingtheeditor=Opening the editor
+Analyzingfont=Analyzing font
+createdestinationdirectory=create destination directory
+movetodestingationdirectory=move to destingation directory
+Gettingfields=Getting fields...
