--- a/com.jaspersoft.studio/src/com/jaspersoft/studio/messages/messages_zh.properties
+++ b/com.jaspersoft.studio/src/com/jaspersoft/studio/messages/messages_zh.properties
@@ -2705,3 +2705,30 @@ BindingsPreferencePageRestoreDefault=\u6062\u590D\u9ED8\u8BA4
 VErrorPreview_DataQueriedAt=\u6570\u636E\u67E5\u8BE2\u4E8E
 VErrorPreview_UsedDataFromSnapshot=\u5FEB\u7167\u4E2D\u7684\u5DF2\u7528\u6570\u636E
 VErrorPreview_DataSnapshotFile=\u6570\u636E\u5FEB\u7167\u6587\u4EF6
+
+Forminitialisation=\u8868\u5355\u521D\u59CB\u5316
+Cleaningproject=\u6B63\u5728\u6E05\u7406\u5DE5\u7A0B
+TestingDataAdapter=\u6B63\u5728\u6D4B\u8BD5\u6570\u636E\u9002\u914D\u5668
+Creating=\u6B63\u5728\u521B\u5EFA
+Exportingresources=\u6B63\u5728\u5BFC\u51FA\u8D44\u6E90
+RestoringResources=\u6B63\u5728\u6062\u590D\u8D44\u6E90
+PrintingtheReport=\u6B63\u5728\u6253\u5370\u62A5\u544A
+Savingsnapshotto=\u6B63\u5728\u4FDD\u5B58\u5FEB\u7167\u81F3
+Savingdatasnapshotto=\u6B63\u5728\u4FDD\u5B58\u6570\u636E\u5FEB\u7167\u81F3
+Creatingfontsextensionfile=\u6B63\u5728\u521B\u5EFA\u5B57\u4F53\u6269\u5C55\u6587\u4EF6
+UpdateStylesTab=\u66F4\u65B0\u6837\u5F0F\u9009\u9879\u5361
+ResetreportUUIDs=\u91CD\u7F6E\u62A5\u544AUUID
+LoadingJRextensions=\u6B63\u5728\u52A0\u8F7DJR\u6269\u5C55
+Processingpleasewait=\u6B63\u5728\u5904\u7406\uFF0C\u8BF7\u7B49\u5F85
+Postfilechange=\u53D1\u5E03\u6587\u4EF6\u66F4\u6539
+VerifyStyles=\u9A8C\u8BC1\u6837\u5F0F
+loadmap=\u52A0\u8F7D\u5730\u56FE
+loadimage=\u52A0\u8F7D\u56FE\u7247
+refreshwidgets=\u5237\u65B0\u5C0F\u90E8\u4EF6
+Cratingproject=\u6B63\u5728\u88C5\u914D\u5DE5\u7A0B
+Openingfileforediting=\u6B63\u5728\u6253\u5F00\u6587\u4EF6\u8FDB\u884C\u7F16\u8F91...
+Openingtheeditor=\u6253\u5F00\u7F16\u8F91\u5668
+Analyzingfont=\u6B63\u5728\u5206\u6790\u5B57\u4F53
+createdestinationdirectory=\u521B\u5EFA\u76EE\u6807\u76EE\u5F55
+movetodestingationdirectory=\u79FB\u52A8\u5230\u76EE\u6807\u76EE\u5F55
+Gettingfields=\u6B63\u5728\u83B7\u53D6\u5B57\u6BB5...
