--- a/com.jaspersoft.studio.components/src/com/jaspersoft/studio/components/chart/messages/messages_zh.properties
+++ b/com.jaspersoft.studio.components/src/com/jaspersoft/studio/components/chart/messages/messages_zh.properties
@@ -746,3 +746,6 @@ ChartCustomizerClass=\u56FE\u8868\u81EA\u5B9A\u4E49\u7C7B
 Selectthedefinitionfile=\u9009\u62E9\u5B9A\u4E49\u6587\u4EF6
 SelecttheChartCustomizerdefinitionfile=\u9009\u62E9\u56FE\u8868\u81EA\u5B9A\u4E49\u5B9A\u4E49\u6587\u4EF6
 SelectDestinationDialog=\u9009\u62E9\u76EE\u7684\u5BF9\u8BDD\u6846
+ExportingChartThemestoaJAR=\u5C06\u56FE\u8868\u4E3B\u9898\u5BFC\u51FA\u5230JAR
+Creating=\u6B63\u5728\u521B\u5EFA
+Openingfileforediting=\u6B63\u5728\u6253\u5F00\u6587\u4EF6\u8FDB\u884C\u7F16\u8F91...
