--- a/com.jaspersoft.studio.server/src/com/jaspersoft/studio/server/messages/messages_zh.properties
+++ b/com.jaspersoft.studio.server/src/com/jaspersoft/studio/server/messages/messages_zh.properties
@@ -486,3 +486,19 @@ DefaultMainReportLabel=\u9ED8\u8BA4\u4E3B\u62A5\u544A\u6807\u7B7E
 DefaultMainReportName=\u9ED8\u8BA4\u4E3B\u62A5\u544A\u540D\u79F0
 Type=\u7C7B\u578B
 SSOServer=SSO\u670D\u52A1\u5668
+Copyresources=\u590D\u5236\u8D44\u6E90
+Resolvingreference=\u89E3\u6790\u5F15\u7528
+Movingelements=\u6B63\u5728\u79FB\u52A8\u5143\u7D20
+UpdateCascadingInputControls=\u66F4\u65B0\u7EA7\u8054\u8F93\u5165\u63A7\u4EF6
+UpdateControls=\u66F4\u65B0\u63A7\u4EF6
+Lookingintorepository=\u6B63\u5728\u67E5\u770B\u5B58\u50A8\u5E93
+Saving=\u6B63\u5728\u4FDD\u5B58
+Testingconnection=\u6B63\u5728\u6D4B\u8BD5\u8FDE\u63A5
+Connecting=\u6B63\u5728\u8FDE\u63A5
+Canceling=\u6B63\u5728\u53D6\u6D88
+Buildingreport=\u6B63\u5728\u6784\u5EFA\u62A5\u544A
+UpdateReportOptions=\u66F4\u65B0\u62A5\u544A\u9009\u9879
+Validating=\u6B63\u5728\u9A8C\u8BC1
+InitJRSbuiltinparameters=\u521D\u59CB\u5316JRS\u5185\u7F6E\u53C2\u6570
+Refreshingtree=\u6B63\u5728\u5237\u65B0\u6811\u7ED3\u6784
+Uploadingdrivers=\u6B63\u5728\u4E0A\u4F20\u9A71\u52A8
