--- a/eclipse.plugin.aiassistant/src/eclipse/plugin/aiassistant/messages/messages.properties
+++ b/eclipse.plugin.aiassistant/src/eclipse/plugin/aiassistant/messages/messages.properties
@@ -89,6 +89,7 @@ Unbookmark=Unbookmark
 UnbookmarkTooltip=Unbookmark matching API settings
 Validate=Validate
 ValidateTooltip=Validate current API settings
+
 Clear=Clear
 ClearTooltip=Clear all bookmarked API settings
 Sort=Sort
@@ -101,3 +102,5 @@ Show=Show
 Showorhidepassword=Show or hide password
 
 Vieworedittheprompttemplates=View or edit the prompt templates.
+
+Thinking=Thinking
