--- a/eclipse.plugin.aiassistant/src/eclipse/plugin/aiassistant/messages/messages_zh.properties
+++ b/eclipse.plugin.aiassistant/src/eclipse/plugin/aiassistant/messages/messages_zh.properties
@@ -102,3 +102,5 @@ Show=\u663E\u793A
 Showorhidepassword=\u663E\u793A\u6216\u9690\u85CF\u5BC6\u7801
 
 Vieworedittheprompttemplates=\u67E5\u770B\u6216\u7F16\u8F91\u63D0\u793A\u6A21\u677F.
+
+Thinking=\u6B63\u5728\u601D\u8003
